--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,203 @@
+body {
+    font-family: helvetica;
+}
+
+
 nav ul{
+    background-color: #1F2937;
     display: flex;
-    justify-content: center;
     list-style-type: none;
     padding: 2px;
     margin: 0px;
-    border: 2px solid peachpuff;
 }
 
 li {
+    font-size: 18px;
     padding: 2px;
-    margin: 2px 4px;
-    border: 1px solid red;
+    margin: 0px 10px;
+}
+
+li a{
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+ nav ul .logo {
+    margin-left:100px;
+    font-size: 24px;
+    color: #F9FAF8;
+    margin-right: auto;
+    font-weight: bold;
+}
+
+nav ul .last {
+    margin-right:100px;
+}
+
+/* First Box - Introduction */
+
+.first-box{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    background-color: #1F2937;
+    margin: 0px;
+    padding-top: 100px;
+    padding-bottom: 40px;
+    gap: 60px;
+
+    
+
+}
+
+.first-box .content{
+    display: flex;
+    color: #F9FAF8;
+    flex-basis: 400px;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px;
+    font-size: 18px;
+    gap: 4px;
+    
+}
+
+.first-box .content button{
+    align-self: start;
+    width: 200px;
+    background-color: #3882F6;
+    border-radius: 16px;
+    font-size: 18px;
+}
+
+.first-box img{
+    height: 300px;
+    width: auto;
+    border-radius: 16px;
+}
+
+.first-box .content h2 {
+    font-size: 48px;
+    
+    margin: 0px;
+}
+
+/* Second Box - Interests */
+
+.second-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.second-box-tiles {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    
+
+}
+
+.second-box .media-object {
+    flex-basis: 300px;
+    margin-bottom: 20px;
+}
+
+.second-box .media-object p {
+    margin-top: 8px;
+    text-align: center;
+    color: #1F2937;
+}
+
+.second-box-tiles img {
+    width: 300px;
+    height: 210px;
+    border-radius: 16px;
+}
+.second-box h2 {
+    color: #1F2937;
+    font-size: 36px;
+}
+
+
+/* Third Box - Quotation */
+
+.third-box {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #1F2937;
+    font-size: 36px;
+    padding: 20px;
+}
+
+.third-box .quote{
+    font-style: italic;
+    margin-bottom: 10px;
+    padding: 0px; 
+    width: 720px;
+}
+
+.third-box .Author {
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    text-align: right;
+    width: 720px;
+}
+
+
+/* Fourth Box */
+
+.fourth-box {
+    display: flex;
+    width: 840px;
+    margin: 40px auto;
+    justify-content: center;
+    background-color: #3882F6;
+    border-radius: 24px;
+    align-items: center;
+    gap: 24px;
+    
+    
+}
+
+.fourth-box .content {
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    color: #E5E7EB;
+    justify-content: center;
+    padding:20px;
+
+}
+
+.fourth-box .content h5{
+    color: #F9FAF8;
+    font-size: 24px;
+    margin:0px;
+}
+
+.fourth-box .content p {
+    margin:0px;
+}
+
+.fourth-box button {
+    color: #F9FAF8;
+    background-color: #3882F6;
+    padding: 12px;
+    height: fit-content;
+    border-radius: 12px;
+    border-color: #F9FAF8;
+}
+
+
+/* Footers */
+
+.footer {
+    font-size: 18px;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    text-align: center;
 }
